--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>Hello World</h1>
-    <h2>Tyler's practice site</h2>
+    <h2>Tyler's practice page</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non quo aspernatur perspiciatis, necessitatibus ratione
         debitis delectus veniam, suscipit fuga vero magnam mollitia, animi ipsam? Sunt repellat delectus non, excepturi
         id, placeat porro nisi voluptatibus expedita quaerat quis, impedit voluptates aliquid? Est a id tempore
